test/cases/compile_errors/stage1/obj/ignored_deferred_statement_value.zig
export fn foo() void {
    defer {1;}
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:12: error: expression value is ignored
